ajout des backlinks et de leur css

--- a/a-propos.html
+++ b/a-propos.html
@@ -76,11 +76,13 @@
                         Organise-Moi vous propose plusieurs outils pour faciliter votre quotidien :
                     </p>
                     <ul class="features-list">
-                        <li><strong>Planning Semaine</strong> - Organisez votre semaine jour par jour</li>
-                        <li><strong>Liste de Courses</strong> - Gérez vos listes de courses facilement</li>
-                        <li><strong>To-do List</strong> - Suivez vos tâches quotidiennes</li>
-                        <li><strong>Tâches Ménagères</strong> - Répartissez les tâches entre les membres</li>
-                        <li><strong>Checklists</strong> - Préparez la rentrée, un déménagement ou des vacances</li>
+                        <li><a href="tools/planning-semaine.html"><strong>Planning Semaine</strong></a> - Organisez votre semaine jour par jour</li>
+                        <li><a href="tools/liste-courses.html"><strong>Liste de Courses</strong></a> - Gérez vos listes de courses facilement</li>
+                        <li><a href="tools/todo.html"><strong>To-do List</strong></a> - Suivez vos tâches quotidiennes</li>
+                        <li><a href="tools/taches-menageres.html"><strong>Tâches Ménagères</strong></a> - Répartissez les tâches entre les membres</li>
+                        <li><a href="tools/checklist-rentree.html"><strong>Checklist Rentrée</strong></a> - Préparez la rentrée scolaire</li>
+                        <li><a href="tools/checklist-demenagement.html"><strong>Checklist Déménagement</strong></a> - Organisez votre déménagement</li>
+                        <li><a href="tools/checklist-vacances.html"><strong>Checklist Vacances</strong></a> - Préparez vos vacances</li>
                     </ul>
                 </section>
 
@@ -99,6 +101,18 @@
                         Tous nos outils sont entièrement gratuits et accessibles sans inscription. 
                         Utilisez-les autant que vous le souhaitez, quand vous le souhaitez.
                     </p>
+                </section>
+
+                <section class="about-section">
+                    <h2>Informations légales</h2>
+                    <p>
+                        Pour plus d'informations sur l'utilisation de nos outils et la protection de vos données :
+                    </p>
+                    <ul class="features-list">
+                        <li><a href="mentions-legales.html">Mentions légales</a> - Informations sur l'éditeur et l'hébergeur</li>
+                        <li><a href="politique-confidentialite.html">Politique de confidentialité</a> - Comment nous protégeons vos données</li>
+                        <li><a href="conditions-utilisation.html">Conditions d'utilisation</a> - Règles d'usage de nos outils</li>
+                    </ul>
                 </section>
             </div>
         </div>
