--- a/conditions-utilisation.html
+++ b/conditions-utilisation.html
@@ -212,7 +212,26 @@
 
                 <section class="about-section">
                     <p>
-                        <em>Dernière mise à jour : 27 janvier 2025</em>
+                        <em>Dernière mise à jour : 13 décembre 2025</em>
+                    </p>
+                </section>
+
+                <section class="about-section">
+                    <h2>13. Nos outils</h2>
+                    <p>
+                        Découvrez tous nos outils d'organisation disponibles gratuitement :
+                    </p>
+                    <ul class="features-list">
+                        <li><a href="tools/planning-semaine.html">Planning Semaine</a> - Organisez votre semaine jour par jour</li>
+                        <li><a href="tools/liste-courses.html">Liste de Courses</a> - Gérez vos listes de courses facilement</li>
+                        <li><a href="tools/todo.html">To-do List</a> - Suivez vos tâches quotidiennes</li>
+                        <li><a href="tools/taches-menageres.html">Tâches Ménagères</a> - Répartissez les tâches entre les membres</li>
+                        <li><a href="tools/checklist-rentree.html">Checklist Rentrée</a> - Préparez la rentrée scolaire</li>
+                        <li><a href="tools/checklist-demenagement.html">Checklist Déménagement</a> - Organisez votre déménagement</li>
+                        <li><a href="tools/checklist-vacances.html">Checklist Vacances</a> - Préparez vos vacances</li>
+                    </ul>
+                    <p>
+                        <a href="index.html">← Retour à l'accueil</a>
                     </p>
                 </section>
             </div>
