--- a/tools/planning-semaine.html
+++ b/tools/planning-semaine.html
@@ -38,6 +38,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/about.css">
     <link rel="stylesheet" href="../css/planning.css">
 </head>
 
@@ -82,6 +83,37 @@
                 </div>
             </div>
         </div>
+
+        <!-- Section de maillage interne -->
+        <section class="internal-links" aria-label="Autres outils d'organisation">
+            <h2 class="internal-links__title">Découvrez aussi</h2>
+            <ul class="internal-links__list">
+                <li class="internal-links__item">
+                    <a class="internal-links__link" href="../tools/todo.html">To-do list</a>
+                    <span class="internal-links__desc">Notez et suivez vos tâches quotidiennes.</span>
+                </li>
+                <li class="internal-links__item">
+                    <a class="internal-links__link" href="../tools/liste-courses.html">Liste de courses</a>
+                    <span class="internal-links__desc">Préparez vos courses rapidement et efficacement.</span>
+                </li>
+                <li class="internal-links__item">
+                    <a class="internal-links__link" href="../tools/taches-menageres.html">Tâches ménagères</a>
+                    <span class="internal-links__desc">Répartissez les tâches dans le foyer simplement.</span>
+                </li>
+                <li class="internal-links__item">
+                    <a class="internal-links__link" href="../tools/checklist-rentree.html">Checklist rentrée</a>
+                    <span class="internal-links__desc">Préparez la rentrée scolaire en toute sérénité.</span>
+                </li>
+                <li class="internal-links__item">
+                    <a class="internal-links__link" href="../tools/checklist-demenagement.html">Checklist déménagement</a>
+                    <span class="internal-links__desc">Organisez votre déménagement étape par étape.</span>
+                </li>
+                <li class="internal-links__item">
+                    <a class="internal-links__link" href="../tools/checklist-vacances.html">Checklist vacances</a>
+                    <span class="internal-links__desc">Préparez vos vacances sans rien oublier.</span>
+                </li>
+            </ul>
+        </section>
 
     </main>
 
