--- a/tools/liste-courses.html
+++ b/tools/liste-courses.html
@@ -32,6 +32,7 @@
     <link rel="manifest" href="../site.webmanifest">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/about.css">
     <link rel="stylesheet" href="../css/courses.css">
 </head>
 <body>
@@ -102,6 +103,37 @@
                 </div>
             </div>
         </div>
+
+        <!-- Section de maillage interne -->
+        <section class="internal-links" aria-label="Autres outils d'organisation">
+            <h2 class="internal-links__title">Découvrez aussi</h2>
+            <ul class="internal-links__list">
+                <li class="internal-links__item">
+                    <a class="internal-links__link" href="../tools/planning-semaine.html">Planning de la semaine</a>
+                    <span class="internal-links__desc">Visualisez et planifiez votre semaine simplement.</span>
+                </li>
+                <li class="internal-links__item">
+                    <a class="internal-links__link" href="../tools/todo.html">To-do list</a>
+                    <span class="internal-links__desc">Notez et suivez vos tâches quotidiennes.</span>
+                </li>
+                <li class="internal-links__item">
+                    <a class="internal-links__link" href="../tools/taches-menageres.html">Tâches ménagères</a>
+                    <span class="internal-links__desc">Répartissez les tâches dans le foyer simplement.</span>
+                </li>
+                <li class="internal-links__item">
+                    <a class="internal-links__link" href="../tools/checklist-rentree.html">Checklist rentrée</a>
+                    <span class="internal-links__desc">Préparez la rentrée scolaire en toute sérénité.</span>
+                </li>
+                <li class="internal-links__item">
+                    <a class="internal-links__link" href="../tools/checklist-demenagement.html">Checklist déménagement</a>
+                    <span class="internal-links__desc">Organisez votre déménagement étape par étape.</span>
+                </li>
+                <li class="internal-links__item">
+                    <a class="internal-links__link" href="../tools/checklist-vacances.html">Checklist vacances</a>
+                    <span class="internal-links__desc">Préparez vos vacances sans rien oublier.</span>
+                </li>
+            </ul>
+        </section>
     </main>
 
     <footer>
