ajout d'un backlink vers outilsduquotidien.fr

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
         <div class="footer-content">
             <a href="politique-confidentialite.html">Politique de confidentialité</a>
             <a href="conditions-utilisation.html">Conditions d'utilisation</a>
+            <a href="https://outilsduquotidien.fr" rel="noopener noreferrer">Calculs et outils pratiques : OutilsDuQuotidien.fr</a>
         </div>
         <p class="copyright">© 2025 Organise-Moi. Tous droits réservés.</p>
     </footer>
