ajout de organisation de cadeau collectif

--- a/tools/checklist-vacances.html
+++ b/tools/checklist-vacances.html
@@ -114,6 +114,10 @@
                     <a class="internal-links__link" href="../tools/checklist-demenagement.html">Checklist déménagement</a>
                     <span class="internal-links__desc">Organisez votre déménagement étape par étape.</span>
                 </li>
+                <li class="internal-links__item">
+                    <a class="internal-links__link" href="../tools/organisation-cadeau.html">Cadeau collectif</a>
+                    <span class="internal-links__desc">Organisez un cadeau en groupe sans doublons.</span>
+                </li>
             </ul>
         </section>
     </main>
