--- a/tools/planning-semaine.html
+++ b/tools/planning-semaine.html
@@ -112,6 +112,10 @@
                     <a class="internal-links__link" href="../tools/checklist-vacances.html">Checklist vacances</a>
                     <span class="internal-links__desc">Préparez vos vacances sans rien oublier.</span>
                 </li>
+                <li class="internal-links__item">
+                    <a class="internal-links__link" href="../tools/organisation-cadeau.html">Cadeau collectif</a>
+                    <span class="internal-links__desc">Organisez un cadeau en groupe sans doublons.</span>
+                </li>
             </ul>
         </section>
 
