--- a/index.html
+++ b/index.html
@@ -102,6 +102,13 @@
                         <p class="tool-description">Préparez vos vacances sans rien oublier.</p>
                         <a href="tools/checklist-vacances.html" class="tool-button">Préparer</a>
                     </div>
+                    
+                    <div class="tool-card">
+                        <div class="tool-icon">🎁</div>
+                        <h4 class="tool-title">Cadeau Collectif</h4>
+                        <p class="tool-description">Organisez un cadeau en groupe sans doublons.</p>
+                        <a href="tools/organisation-cadeau.html" class="tool-button">Organiser</a>
+                    </div>
                 </div>
             </div>
         </section>
