--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -25,7 +25,6 @@
     <meta name="twitter:description" content="Mentions légales du site Organise-Moi. Informations sur l'éditeur, l'hébergeur et les conditions d'utilisation.">
     <meta name="twitter:image" content="https://www.organise-moi.fr/img/organise-moi.webp">
     
-    <link rel="icon" type="image/svg+xml" href="img/favicon.svg">
     <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
@@ -59,10 +58,8 @@
                         Le site <strong>www.organise-moi.fr</strong> est édité par :
                     </p>
                     <p>
-                        <strong>Vincent Jurine</strong><br>
-                        133 rue de la République<br>
-                        38510 Le Péage-de-Roussillon<br>
-                        France
+                        <strong>NeferWeb</strong><br>
+                        
                     </p>
                 </section>
 
